--- a/ProductMaintenance/ProductApps/MainWindow.xaml
+++ b/ProductMaintenance/ProductApps/MainWindow.xaml
@@ -14,8 +14,10 @@
         <Button Name="calculateButton" Content="_Calculate" HorizontalAlignment="Left" Height="37" Margin="327,152,0,0" VerticalAlignment="Top" Width="122" Click="calculateButton_Click"/>
         <Button Name="clearButton" Content="C_lear" HorizontalAlignment="Left" Height="34" Margin="327,209,0,0" VerticalAlignment="Top" Width="122" Click="clearButton_Click"/>
         <Button Name="closeButton" Content="Cl_ose" HorizontalAlignment="Left" Height="34" Margin="327,264,0,0" VerticalAlignment="Top" Width="122" Click="closeButton_Click"/>
-        <Label Content="Total Charge after &#xD;&#xA;Adding the delivery charge ($25.00)" HorizontalAlignment="Left" Margin="10,214,0,0" VerticalAlignment="Top" Width="208" Height="61"/>
+        <Label Content="Total Charge after &#xD;&#xA;Adding the delivery charge ($25.00)" HorizontalAlignment="Left" Margin="10,214,0,0" VerticalAlignment="Top" Width="208" Height="49"/>
         <TextBox x:Name="totalChargeTextBox" HorizontalAlignment="Left" Margin="235,226,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="80" Height="37"/>
+        <Label Content="Total Charge after &#xD;&#xA;adding the wrapping charge ($5.00)" HorizontalAlignment="Left" Margin="10,275,0,0" VerticalAlignment="Top" Width="208" Height="49"/>
+        <TextBox x:Name="addWrappingTextBox" HorizontalAlignment="Left" Margin="235,281,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="80" Height="37"/>
 
 
     </Grid>
